MRSCMNS-58: Uses Initializer to obtain reports configurations.
The OPD record book report gets one person attribute type from the Initializer.
  modified:   api/src/main/java/org/openmrs/module/mksreports/reports/OutpatientRecordBook.java

The new unit test and its configuration.
  new file:   api/src/test/java/org/openmrs/module/mksreports/reports/OutpatientRecordBookTest.java
  new file:   api/src/test/resources/test-hibernate.cfg.xml
  new file:   api/src/test/resources/testAppDataDir/configuration/jsonkeyvalues/config.json

Dependency on Initializer and on Reporting api-2.0 (for tests).
  modified:   pom.xml
  modified:   api/pom.xml

Definition of a Spring component qualifier for the OPD record book ReportManager implementation.
  modified:   api/src/main/java/org/openmrs/module/mksreports/MKSReportsConstants.java

Application context XML for tests was missing, it now reads the Hibernate configs.
  new file:   api/src/test/resources/TestingApplicationContext.xml
The new test Hibernate config.
  new file:   api/src/test/resources/test-hibernate.cfg.xml
Initializer main service must be defined as a bean.
  modified:   api/src/main/resources/moduleApplicationContext.xml
Requiring Initializer at runtime.
  modified:   omod/src/main/resources/config.xml

Cleanup of existing unit tests.
  modified:   api/src/test/java/org/openmrs/module/mksreports/definition/data/converter/OrderConverterTest.java
  modified:   api/src/test/java/org/openmrs/module/mksreports/definition/data/converter/RoundNumberTest.java
  modified:   api/src/test/java/org/openmrs/module/mksreports/definition/data/evaluator/CalculatedObsDataEvaluatorTest.java
  modified:   api/src/test/java/org/openmrs/module/mksreports/definition/data/evaluator/ObsOnAgeDataEvaluatorTest.java
  modified:   api/src/test/java/org/openmrs/module/mksreports/definition/data/evaluator/PersonNameAndAttributesDataEvaluatorTest.java

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -61,7 +61,6 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>emrapi-api</artifactId>
 			<version>${emrapiVersion}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -75,14 +74,12 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>calculation-api</artifactId>
 			<version>${calculationVersion}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>serialization.xstream-api</artifactId>
 			<version>${serialization.xstreamVersion}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -96,14 +93,30 @@
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>providermanagement-api</artifactId>
 			<version>${providermanagementVersion}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>reporting-api</artifactId>
 			<version>${reportingVersion}</version>
-			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>reporting-api-2.0</artifactId>
+			<version>${reportingVersion}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>idgen-api</artifactId>
+			<version>${idgenVersion}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>initializer-api</artifactId>
+			<version>${initializerVersion}</version>
 		</dependency>
 		
 	</dependencies>
