MRSCMNS-60: Unit test evaluating report without errors.
Dependency on contrib testutils.
  modified:   api/pom.xml
  modified:   pom.xml

Minor refactoring and implementation kick start.
  renamed:    api/src/main/java/org/openmrs/module/mksreports/reports/OutpatientRecordBook.java -> api/src/main/java/org/openmrs/module/mksreports/reports/OutpatientRecordBookManager.java
  new file:   api/src/test/java/org/openmrs/module/mksreports/reports/OutpatientRecordBookManagerTest.java
  deleted:    api/src/test/java/org/openmrs/module/mksreports/reports/OutpatientRecordBookTest.java
  new file:   api/src/test/resources/addressTemplate.xml

Migrating this into its own unit test.
  modified:   api/src/test/java/org/openmrs/module/mksreports/reports/TestReportManager.java
  new file:   api/src/test/java/org/openmrs/module/mksreports/reports/TestReportManagerTest.java

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -136,7 +136,14 @@
 			<version>${initializerVersion}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.openmrs.contrib</groupId>
+			<artifactId>testutils</artifactId>
+			<version>${openmrsTestutilsVersion}</version>
+			<scope>test</scope>
+		</dependency> 
+
 	</dependencies>
 
 </project>
