MRSCMNS-62: Import the Reporting test dataset resource and update tests to use it
Depend on Reporting and Reporting Compatibility modules (for tests only)
	modified:   pom.xml
	modified:   api/pom.xml

Use super class to load the Reporting module's test dataset resource (which extends BaseModuleContextSensitiveTest)
	new file:   api/src/test/java/org/openmrs/module/mksreports/reports/BaseReportTest.java

Extend BaseReportTest class (which loads the Reporting data set) instead of BaseModuleContextSensitiveTest
	modified:   (...)

Few changes in the concepts UUIDs used
	modified:   api/src/test/resources/testAppDataDir/configuration/jsonkeyvalues/config.json

Remove unneeded datasets
	deleted:    api/src/test/resources/org/openmrs/module/mksreports/include/ReportTestDataset.xml
	deleted:    api/src/test/resources/org/openmrs/module/mksreports/include/reportingTestDataset.xml

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -142,8 +142,22 @@
 			<artifactId>testutils</artifactId>
 			<version>${openmrsTestutilsVersion}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>reporting-api-tests</artifactId>
+			<version>${reportingVersion}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
 		</dependency> 
 
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>reportingcompatibility-api</artifactId>
+			<version>${reportingcompatibilityVersion}</version>
+			<scope>test</scope>
+		</dependency> 
 	</dependencies>
 
 </project>
