--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>mksreports</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
+	<version>1.1.1</version>
 	<packaging>pom</packaging>
 	<name>MKS Reports</name>
 	<description>Mekom Solutions reports and reporting tools for OpenMRS</description>
@@ -39,14 +39,14 @@
 
 	<properties>
 		<openMRSVersion>2.0.0</openMRSVersion>
-		<reportingVersion>1.14.0-SNAPSHOT</reportingVersion>
+		<reportingVersion>1.14.0</reportingVersion>
 		<reportingcompatibilityVersion>2.0.4</reportingcompatibilityVersion>
 		<emrapiVersion>1.16</emrapiVersion>
 		<calculationVersion>1.1</calculationVersion>
 		<serialization.xstreamVersion>0.2.11</serialization.xstreamVersion>
 		<providermanagementVersion>2.2</providermanagementVersion>
 		<idgenVersion>4.3</idgenVersion>
-		<initializerVersion>1.0.1-SNAPSHOT</initializerVersion>
+		<initializerVersion>1.0.1</initializerVersion>
 		<openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
 	</properties>
 
