--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,33 @@
 		<openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
 	</properties>
 
+	<build>
+    <plugins>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>2.7.1</version>
+        <configuration>
+          <directories>
+            <directory>.</directory>
+          </directories>
+          <configFile>../OpenMRSFormatter.xml</configFile>
+          <includes>
+            <include>**/*.java</include>
+          </includes>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>format</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 	<repositories>
 		<repository>
 			<id>openmrs-repo</id>
