Patient History to target specific encounters + i18n support.
* This changeset requires the lastest update to the Patient Summary module (not yet publicly available) that replace the use of 'EvaluationContext' with 'EncounterEvaluationContext' in the 'evaluatePatientSummaryTemplate' method of 'PatientSummaryServiceImpl.java'.  Any encounter UUID sent in the query will be passed along and used to filter the report to just that encounter.  If no UUID is passed, all encounters will be included (the default behavior).

* changing default isActive() for outpatient reports to false

* updating to Iniz 1.2.0-SNAPSHOT, on Windows, unit tests are broken per path issue in 1.2.0-SNAPSHOT

* fixing pom.xml for platform version, adding openpdf, setting up testing application context for base context sensitive test spring bean wiring, adding initial MKS Reports controller unit/integration tests

* updating to patientsummary 2.2-SNAPSHOT and uncommenting tests assertFalse()s for inputXml based verifications

* Send 'EncounterIdSet' to patient summary module instead of converting.

* updating default maven repo to https per Jan. 15. changeover, adding log4j.xml configurations

* moving encounter filtering test to api, adding translation of keys and omod test for english

* moving omod test xml dataset to more descriptive filename, minor fixes like StringUtils.isBlank() instead of verbose string checks

* updating controller to use new patientsummary api method, passing in customized EncounterEvaluationContext, adding HFE-UI print customization, functionality requires latest SNAPSHOTs from PS-27 and HTML-714 branches

* adding ignore VS Code IDE directory

* updating gp names per review comments on HFE-UI HTML-714

* adding header to patient history report with image for branding logo and requested by <auth'd user>, and GP to allow other modules to set logo

* adding javadoc to controller for new optional GET params

Co-authored-by: James Sibley <jsibley@

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -22,18 +22,104 @@
 			<groupId>org.openmrs.web</groupId>
 			<artifactId>openmrs-web</artifactId>
 			<scope>provided</scope>
+			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.openmrs.web</groupId>
 			<artifactId>openmrs-web</artifactId>
-			<scope>provided</scope>
-			<classifier>tests</classifier>
+			<scope>test</scope>
+			<type>test-jar</type>
+			<version>${openmrsPlatformVersion}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.librepdf</groupId>
+		    <artifactId>openpdf</artifactId>
+		    <version>${openpdfVersion}</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>fop</artifactId>
+			<version>1.0</version>
+			<type>jar</type>
+			<exclusions>
+				<exclusion>
+					<artifactId>xalan</artifactId>
+					<groupId>xalan</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-io</groupId>
+					<artifactId>commons-io</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>calculation-api</artifactId>
+			<version>${calculationVersion}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>serialization.xstream-api</artifactId>
+			<version>${serialization.xstreamVersion}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>initializer-api</artifactId>
+			<version>${initializerVersion}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>reportingcompatibility-api</artifactId>
+			<version>${reportingcompatibilityVersion}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>serialization.xstream-api-2.0</artifactId>
+			<version>${serialization.xstreamVersion}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>calculation-api</artifactId>
+			<version>${calculationVersion}</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
 		<finalName>${project.parent.artifactId}-${project.parent.version}</finalName>
-
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+			<testResource>
+				<directory>../omod/src/main/webapp/resources</directory>
+				<targetPath>web/module/resources/</targetPath>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.openmrs.maven.plugins</groupId>
