Use HTTPS Maven repos

--- a/pom.xml
+++ b/pom.xml
@@ -146,11 +146,11 @@
 		<repository>
 			<id>openmrs-repo</id>
 			<name>OpenMRS Nexus Repository</name>
-			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
+			<url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
 		</repository>
 		<repository>
 			<id>mks-nexus</id>
-			<name>MKS NExus Repository</name>
+			<name>MKS Nexus Repository</name>
 			<url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
 		</repository>
 		<repository>
@@ -164,7 +164,7 @@
 		<pluginRepository>
 			<id>openmrs-repo</id>
 			<name>OpenMRS Nexus Repository</name>
-			<url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
+			<url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
