--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>commonreports</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<name>Common Reports</name>
 	<description>Common set of reusable, standard or canned reports for OpenMRS that can be activated or deactivated</description>
@@ -45,14 +45,14 @@
 		<openmrsPlatformVersion>2.0.0</openmrsPlatformVersion>
 		<openmrsPlatformToolsVersion>2.0.0</openmrsPlatformToolsVersion>
 		<reportingVersion>1.21.0</reportingVersion>
-		<patientsummaryVersion>2.2-SNAPSHOT</patientsummaryVersion>
+		<patientsummaryVersion>2.2.0</patientsummaryVersion>
 		<reportingcompatibilityVersion>2.0.4</reportingcompatibilityVersion>
 		<emrapiVersion>1.16</emrapiVersion>
 		<calculationVersion>1.1</calculationVersion>
 		<serialization.xstreamVersion>0.2.11</serialization.xstreamVersion>
 		<providermanagementVersion>2.2</providermanagementVersion>
 		<idgenVersion>4.3</idgenVersion>
-		<initializerVersion>1.2.0-SNAPSHOT</initializerVersion>
+		<initializerVersion>2.1.0</initializerVersion>
 		<openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
 		<openpdfVersion>1.3.11</openpdfVersion>
 	</properties>
