--- a/api/pom.xml
+++ b/api/pom.xml
@@ -167,11 +167,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>com.wix</groupId>
-		    <artifactId>wix-embedded-mysql</artifactId>
-		    <version>4.2.0</version>
-		    <scope>test</scope>
-		</dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+            <version>${mysqlTestContainerVersion}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
