--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 	<modules>
 		<module>api</module>
 		<module>api-2.2</module>
+		<module>api-2.5</module>
 		<module>omod</module>
 	</modules>
 
@@ -54,6 +55,7 @@
 		<initializerVersion>2.1.0</initializerVersion>
 		<openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
 		<openpdfVersion>1.3.11</openpdfVersion>
+		<mysqlTestContainerVersion>1.15.2</mysqlTestContainerVersion>
 	</properties>
 
 	<dependencies>
@@ -87,6 +89,13 @@
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mysql</artifactId>
+            <version>${mysqlTestContainerVersion}</version>
+            <scope>test</scope>
+        </dependency>
 
 	</dependencies>
 
