--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 		<providermanagementVersion>2.2</providermanagementVersion>
 		<idgenVersion>4.3</idgenVersion>
 		<initializerVersion>2.1.0</initializerVersion>
+		<appointmentsVersion>1.4.0</appointmentsVersion>
 		<openmrsTestutilsVersion>1.3</openmrsTestutilsVersion>
 		<openpdfVersion>1.3.11</openpdfVersion>
 		<mysqlTestContainerVersion>1.15.2</mysqlTestContainerVersion>
